--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-        https://www.google.com/search?client=opera-gx&q=<iframe+width%3D"710"+height%3D"1300"+frameborder%3D"0"+marginwidth%3D"0"+marginheight%3D"0"+scrolling%3D"no"+src%3D"https%3A%2F%2Fcalculator.carbonfootprint.com%2Fcalculator.aspx"><%2Fiframe>&sourceid=opera&ie=UTF-8&oe=UTF-8
+        <iframe width="710" height="1300" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" src="https://calculator.carbonfootprint.com/calculator.aspx"></iframe>
     </main>
   </body>
 </html>
